o Preparing to make the default pathname for GenericDataFile() to
  become NA_character_.  It is currently NULL, but the goal is to
  enforce length(pathname) to be one.
o Added hasChecksumFile() for GenericDataFile.
o hasBeenModified() for GenericDataFile gained argument 'update'.
o Package requires R (>= 3.1.2) released October 2014, because
  of its dependency on the listenv package.
o CLEANUP: Removed na.omit() for GenericDataFileSet; the default
  one in the stats package works equally well.
o ROBUSTNESS: Increased test coverage from 51% to 62%.
o BUG FIX: Arguments$getTags() failed to drop missing values.
o BUG FIX: equals(df, other) for GenericDataFile would give an error
  if 'other' was not a GenericDataFile.
o BUG FIX: dropTags() would drop name if a tag had the same name.
o BUG FIX: getOneFile() on a GenericDataFileSet with a single
  missing file would give an error, now it gives a file with
  an NA pathname.


Version: 2.9.0 [2015-10-20]
o Add support for dsApply(..., .parallel="future"), which utilizes
  the future package.
o CLEANUP: Defunct methods dropped.
o Package now requires R (>= 3.1.1) released July 2014. This allows
  us to use BioC (>= 3.0) (October 2014).


Version: 2.8.0 [2015-08-06]
o Added support for sortBy(..., by="mixedroman") for GenericDataFileSet.
o Now commentChar="" and commentChar=FALSE also disables searching for
  comment characters (just as commentChar=NULL) for TabularTextFile.
o Explicit import of 'utils' functions.
o Package requires R (>= 3.1.0) released March 2014.
o BUG FIX: readDataFrame() for TabularTextFile with column-names
  translators set, could give an error "Number of read data columns
  does not match the number of column headers: ...". This was due to
  an update in utils::read.table() as of R v3.2.1 svn rev 68831.


Version: 2.7.2 [2015-05-24]
o ROBUSTNESS: Added getFullNames(..., onRemapping) to GenericDataFileSet
  to warn/err on full-name translations that generates inconsistent